--- a/refactor-me/ProductAPI.csproj
+++ b/refactor-me/ProductAPI.csproj
@@ -145,6 +145,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\AutoMappings.cs" />
+    <Compile Include="Services\IProductService.cs" />
+    <Compile Include="Services\IProductOptionService.cs" />
     <Compile Include="Services\ProductDBContext.cs" />
     <Compile Include="Models\ProductOption.cs" />
     <Compile Include="Models\ProductOptions.cs" />
@@ -154,11 +156,8 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IDataContext.cs" />
-    <Compile Include="Services\IRepository.cs" />
-    <Compile Include="Services\IRepositoryFactory.cs" />
-    <Compile Include="Services\IRepositoryService.cs" />
-    <Compile Include="Services\RepositoryService.cs" />
+    <Compile Include="Services\ProductOptionService.cs" />
+    <Compile Include="Services\ProductService.cs" />
     <Compile Include="WebModule.cs" />
   </ItemGroup>
   <ItemGroup>
