--- a/refactor-me/ProductAPI.csproj
+++ b/refactor-me/ProductAPI.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ProductOptionService.cs" />
     <Compile Include="Services\ProductService.cs" />
+    <Compile Include="Validation\InvalidAPIRequestException.cs" />
     <Compile Include="WebModule.cs" />
   </ItemGroup>
   <ItemGroup>
